--- a/latihan/bootstrap/index.html
+++ b/latihan/bootstrap/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="font-awesome"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,7 +18,128 @@
     <title>Dwicky Darmawan - Bootstrap</title>
   </head>
   <body>
-    <button class="btn btn-primary">Button</button>
+    <!-- Ini Navbar -->
+    <nav
+      class="navbar shadow navbar-expand-sm bg-light navbar-light sticky-top"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">My Blog</a>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Hire</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Courses</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!-- Ini Penutup Navbar -->
+
+    <main class="container">
+      <section>
+        <h2 class="h4 mt-5 text-primary fw-light mb-4">RECENT ARTICLES ></h2>
+
+        <!-- Ini artikel utama -->
+        <article class="row mb-5">
+          <div class="col-6">
+            <img
+              class="img-fluid"
+              src="https://placeimg.com/640/480/architecture"
+              alt="article-image"
+            />
+          </div>
+          <div class="col-6">
+            <h3 class="fw-light lh-lg mb-2">Dolor sit amet</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+              exercitationem mollitia tempore similique voluptatem nulla ipsam
+              fugit quaerat, sunt, minima fuga, ab culpa non facere sequi iusto
+              asperiores. Nihil, voluptates. Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Repellendus est id, earum, sunt
+              nulla consequuntur quisquam veniam nesciunt beatae esse repellat
+              voluptatibus repudiandae, eaque incidunt sint architecto.
+              Aspernatur, dolores tempora.
+            </p>
+          </div>
+        </article>
+        <!-- Ini penutup artikel utama -->
+
+        <!-- Ini artikel lainnya -->
+        <article class="row mb-5">
+          <div class="col-4">
+            <img
+              class="img-fluid"
+              src="https://placeimg.com/640/480/architecture"
+              alt="article-image"
+            />
+          </div>
+          <div class="col-8">
+            <h3 class="fw-light lh-lg mb-2">Dolor sit amet</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+              exercitationem mollitia tempore similique voluptatem nulla ipsam
+              fugit quaerat, sunt, minima fuga, ab culpa non facere sequi iusto
+              asperiores. Nihil, voluptates. Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Repellendus est id, earum, sunt
+              nulla consequuntur quisquam veniam nesciunt beatae esse repellat
+              voluptatibus repudiandae, eaque incidunt sint architecto.
+              Aspernatur, dolores tempora.
+            </p>
+          </div>
+        </article>
+        <!-- Ini penutup artikel lainnya -->
+
+        <!-- Ini artikel lainnya -->
+        <article class="row mb-5">
+          <div class="col-4">
+            <img
+              class="img-fluid"
+              src="https://placeimg.com/640/480/architecture"
+              alt="article-image"
+            />
+          </div>
+          <div class="col-8">
+            <h3 class="fw-light lh-lg mb-2">Dolor sit amet</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+              exercitationem mollitia tempore similique voluptatem nulla ipsam
+              fugit quaerat, sunt, minima fuga, ab culpa non facere sequi iusto
+              asperiores. Nihil, voluptates. Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Repellendus est id, earum, sunt
+              nulla consequuntur quisquam veniam nesciunt beatae esse repellat
+              voluptatibus repudiandae, eaque incidunt sint architecto.
+              Aspernatur, dolores tempora.
+            </p>
+          </div>
+        </article>
+        <!-- Ini penutup artikel lainnya -->
+      </section>
+    </main>
+
+    <footer class="border-top">
+      <div class="container-fluid py-4 d-flex justify-content-between">
+        <span>@ Dwicky Darmawan</span>
+        <section>
+          <span class="fa-brands fa-facebook h4 mx-1">FB</span>
+          <span class="fa-brands fa-google h4 mx-1">Google</span>
+          <span class="fa-brands fa-github h4 mx-1">Github</span>
+          <span class="fa-brands fa-twitter h4 mx-1">Twitter</span>
+        </section>
+        <section>
+          <a href="">Contact Me</a>
+          <a href="">Privacy Term</a>
+        </section>
+      </div>
+    </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/js/all.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
