tugas-bootstrap-dwicky

--- a/latihan/bootstrap/index.html
+++ b/latihan/bootstrap/index.html
@@ -51,7 +51,7 @@
           <div class="col-6">
             <img
               class="img-fluid"
-              src="https://placeimg.com/640/480/architecture"
+              src="https://placeimg.com/640/480/arch"
               alt="article-image"
             />
           </div>
@@ -76,7 +76,7 @@
           <div class="col-4">
             <img
               class="img-fluid"
-              src="https://placeimg.com/640/480/architecture"
+              src="https://placeimg.com/640/480/arch"
               alt="article-image"
             />
           </div>
@@ -101,7 +101,7 @@
           <div class="col-4">
             <img
               class="img-fluid"
-              src="https://placeimg.com/640/480/architecture"
+              src="https://placeimg.com/640/480/arch"
               alt="article-image"
             />
           </div>
