tugas-bootstrap-dwickydarmawan

--- a/tugas/gen-11-tugas-bootstrap-dwickydarmawan/index.html
+++ b/tugas/gen-11-tugas-bootstrap-dwickydarmawan/index.html
@@ -237,18 +237,24 @@
         <span>@ Dwicky Darmawan</span>
         <section>
           <a href="https://www.facebook.com"
-            ><span class="fa-brands fa-facebook h4 mx-1">FB</span></a
+            ><span class="fa-brands fa-facebook h4 mx-1 link-light">FB</span></a
           >
           <a href="https://www.github.com/dwickydarmawan22"
-            ><span class="fa-brands fa-github h4 mx-1">Github</span></a
+            ><span class="fa-brands fa-github h4 mx-1 link-light"
+              >Github</span
+            ></a
           >
           <a href="https://www.instagram.com"
-            ><span class="fa-brands fa-instagram h4 mx-1">Instagram</span></a
+            ><span class="fa-brands fa-instagram h4 mx-1 link-light"
+              >Instagram</span
+            ></a
           >
         </section>
         <section>
-          <a href="" class="px-3 text-decoration-none">Contact Me</a>
-          <a href="" class="px-3 text-decoration-none">Privacy Term</a>
+          <a href="" class="px-3 text-decoration-none text-light">Contact Me</a>
+          <a href="" class="px-3 text-decoration-none text-light"
+            >Privacy Term</a
+          >
         </section>
       </div>
     </footer>
