--- a/tugas/gen-11-tugas-tailwind-dwickydarmawan/index.html
+++ b/tugas/gen-11-tugas-tailwind-dwickydarmawan/index.html
@@ -24,32 +24,69 @@
     <!-- Ini Penutup Header  -->
 
     <!-- Ini Navbar -->
-    <nav class="flex justify-center bg-white shadow-lg py-2 sticky top-0 z-50">
-      <a
-        href="#responsive-header"
-        class="block mt-4 lg:inline-block lg:mt-0 text-black hover:bg-[#ff7400] hover:text-white p-4 mr-7"
-      >
-        Home
-      </a>
-      <a
-        href="#responsive-header"
-        class="block mt-4 lg:inline-block lg:mt-0 text-black hover:bg-[#ff7400] hover:text-white p-4 mr-7"
-      >
-        About
-      </a>
-      <a
-        href="#responsive-header"
-        class="block mt-4 lg:inline-block lg:mt-0 text-black hover:bg-[#ff7400] hover:text-white p-4 mr-7"
-      >
-        Category
-      </a>
-      <a
-        href="#responsive-header"
-        class="block mt-4 lg:inline-block lg:mt-0 text-black hover:bg-[#ff7400] hover:text-white p-4"
-      >
-        Contact
-      </a>
+    <nav
+      class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded shadow-lg sticky top-0 z-50"
+    >
+      <div class="container flex flex-wrap justify-center items-center mx-auto">
+        <button
+          data-collapse-toggle="navbar-default"
+          type="button"
+          class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+          aria-controls="navbar-default"
+          aria-expanded="false"
+        >
+          <span class="sr-only">Open main menu</span>
+          <svg
+            class="w-6 h-6"
+            aria-hidden="true"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+        </button>
+        <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+          <ul
+            class="flex flex-col p-4 mt-4 bg-gray-50 rounded-lg border border-gray-100 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:border-gray-700"
+          >
+            <li>
+              <a
+                href="#"
+                class="block p-4 py-2 text-black rounded hover:text-white hover:bg-[#ff7400] md:border-0"
+                >About</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                class="block p-4 py-2 text-black rounded hover:text-white hover:bg-[#ff7400] md:border-0"
+                >Services</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                class="block p-4 py-2 text-black rounded hover:text-white hover:bg-[#ff7400] md:border-0"
+                >Pricing</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                class="block p-4 py-2 text-black rounded hover:text-white hover:bg-[#ff7400] md:border-0"
+                >Contact</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
+
     <!-- Ini Penutup Navbar -->
 
     <!-- Ini Carousel -->
@@ -176,7 +213,7 @@
 
     <!-- Ini Konten -->
     <main class="container w-full mx-auto py-10 grid grid-cols-3 gap-10">
-      <section class="col-span-2">
+      <section class="col-span-3 md:col-span-2">
         <!--  Artikel Utama -->
         <article class="mb-5">
           <img
@@ -253,10 +290,10 @@
         </article>
         <!-- Penutup Artikel Lainnya -->
       </section>
-      <section>
+      <section class="col-span-3 md:col-span-1">
         <div class="container shadow-lg py-3">
           <img
-            class="rounded-full py-3 w-1/2 block mx-auto z-10"
+            class="rounded-full py-3 w-1/6 md:w-1/2 block mx-auto"
             src="https://placeimg.com/200/200/arch"
             alt="article-image"
           />
