tugas-tailwind-dwickydarmawan

--- a/tugas/gen-11-tugas-tailwind-dwickydarmawan/index.html
+++ b/tugas/gen-11-tugas-tailwind-dwickydarmawan/index.html
@@ -398,6 +398,46 @@
             Hope you like it !
           </p>
         </div>
+
+        <!-- Categories -->
+        <section class="col-span-3 md:col-span-1">
+          <h1 class="py-5 text-2xl">Categories</h1>
+          <a href="#" class="py-5">
+            <div class="py-3 hover:scale-110">
+              <img
+                class="w-full"
+                src="https://placeimg.com/1000/400/animals"
+                alt="article-image"
+              />
+              <h1 class="bg-[#ff7400] w-full pl-4 py-3 text-white">Animals</h1>
+            </div>
+          </a>
+          <a href="#" class="py-5">
+            <div class="py-3 hover:scale-110">
+              <img
+                class="w-full"
+                src="https://placeimg.com/1000/400/arch"
+                alt="article-image"
+              />
+              <h1 class="bg-[#ff7400] w-full pl-4 py-3 text-white">
+                Architecture
+              </h1>
+            </div>
+          </a>
+          <a href="#" class="py-5">
+            <div class="py-3 hover:scale-110">
+              <img
+                class="w-full"
+                src="https://placeimg.com/1000/400/tech"
+                alt="article-image"
+              />
+              <h1 class="bg-[#ff7400] w-full pl-4 py-3 text-white">
+                Technology
+              </h1>
+            </div>
+          </a>
+        </section>
+        <!-- Categories Penutup -->
       </section>
     </main>
 
