portfolio-tailwind-dwicky

--- a/tugas/gen-11-tugas-tailwind-portfolio-dwickydarmawan/index.html
+++ b/tugas/gen-11-tugas-tailwind-portfolio-dwickydarmawan/index.html
@@ -93,19 +93,16 @@
     <header id="home" class="relative">
       <div class="carousel w-full">
         <div id="item1" class="carousel-item w-full">
-          <img
-            src="https://placeimg.com/1000/500/arch"
-            class="w-full blur-md"
-          />
+          <img src="https://placeimg.com/1000/500/arch" class="w-full" />
         </div>
         <div id="item2" class="carousel-item w-full">
-          <img src="https://placeimg.com/1000/500/arch" class="w-full" />
+          <img src="https://placeimg.com/1000/500/nature" class="w-full" />
         </div>
         <div id="item3" class="carousel-item w-full">
-          <img src="https://placeimg.com/1000/500/arch" class="w-full" />
+          <img src="https://placeimg.com/1000/500/tech" class="w-full" />
         </div>
         <div id="item4" class="carousel-item w-full">
-          <img src="https://placeimg.com/1000/500/arch" class="w-full" />
+          <img src="https://placeimg.com/1000/500/people" class="w-full" />
         </div>
       </div>
       <div class="absolute bottom-0 left-28 flex flex-col py-3 gap-2">
@@ -145,8 +142,9 @@
             <li class="mr-4">
               <a
                 href="#"
+                aria-current="page"
                 class="inline-block text-lg p-4 rounded-t-lg border-b-2 border-transparent hover:text-white hover:border-white active:text-abutua active:border-abutua"
-                >Profile</a
+                >All</a
               >
             </li>
             <li class="mr-4">
@@ -191,52 +189,52 @@
         <!-- Ini isi Konten -->
         <div class="grid grid-rows-5 grid-cols-4 gap-4 mt-10 mb-20">
           <img
-            src="https://placeimg.com/500/500/arch"
+            src="https://source.unsplash.com/random/500×500/?food"
             alt=""
-            class="row-start-1 row-end-3 col-span-2 w-full"
+            class="row-start-1 row-end-3 col-span-2 w-full aspect-square"
           />
           <img
-            src="https://placeimg.com/500/500/arch"
+            src="https://source.unsplash.com/random/500×500/?building"
             alt=""
             class="row-start-1 row-end-3 row-span-2 col-span-1 aspect-[1/2.05] w-full"
           />
           <img
-            src="https://placeimg.com/500/500/arch"
+            src="https://source.unsplash.com/random/500×500/?portrait"
             alt=""
             class="aspect-square row-start-1 row-end-2 row-span-2 col-span-1 w-full"
           />
           <img
-            src="https://placeimg.com/500/500/arch"
+            src="https://source.unsplash.com/random/500×500/?architecture"
             alt=""
             class="aspect-[1/2.05] row-start-2 row-end-4 row-span-2 col-span-1 w-full"
           />
           <img
-            src="https://placeimg.com/500/500/arch"
+            src="https://source.unsplash.com/random/500×500/?nature"
             alt=""
             class="aspect-square row-start-3 row-end-5 row-span-2 col-span-1 w-full col-end-2"
           />
           <img
-            src="https://placeimg.com/500/500/arch"
+            src="https://source.unsplash.com/random/500×500/?apartment"
             alt=""
             class="w-full aspect-[2.05/1] row-start-3 row-end-5 row-span-2 col-span-2 col-end-4"
           />
           <img
-            src="https://placeimg.com/500/500/arch"
+            src="https://source.unsplash.com/random/500×500/?hotel"
             alt=""
             class="row-start-4 row-end-6 row-span-2 col-span-1 aspect-[1/2.05] w-full col-end-2"
           />
           <img
-            src="https://placeimg.com/500/500/arch"
+            src="https://source.unsplash.com/random/500×500/?model"
             alt=""
             class="aspect-square row-start-4 row-span-2 col-span-1 w-full col-start-2"
           />
           <img
-            src="https://placeimg.com/500/500/arch"
+            src="https://source.unsplash.com/random/500×500/?junk-food"
             alt=""
             class="aspect-square row-start-5 row-span-2 col-span-1 w-full col-start-2"
           />
           <img
-            src="https://placeimg.com/500/500/arch"
+            src="https://source.unsplash.com/random/500×500/?natural-tourism"
             alt=""
             class="aspect-square row-start-4 row-span-2 col-span-2 w-full col-start-3"
           />
@@ -445,9 +443,8 @@
               </svg>
               <blockquote>
                 <p class="text-2xl italic font-medium text-abumuda">
-                  "Flowbite is just awesome. It contains tons of predesigned
-                  components and pages starting from login screen to complex
-                  dashboard. Perfect choice for your next SaaS application."
+                  "Thank you for my recently purchased technology It is much
+                  admired!"
                 </p>
               </blockquote>
               <figcaption
@@ -455,22 +452,22 @@
               >
                 <img
                   class="w-6 h-6 rounded-full"
-                  src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/michael-gouch.png"
+                  src="https://source.unsplash.com/random/500×500/?portrait"
                   alt="profile picture"
                 />
                 <div class="flex items-center divide-x-2 divide-white">
                   <cite class="pr-3 font-medium text-abumuda"
-                    >Micheal Gough</cite
+                    >Ariana Thompson</cite
                   >
                   <cite class="pl-3 text-sm font-light text-abumuda"
-                    >CEO at Google</cite
+                    >San Francisco</cite
                   >
                 </div>
               </figcaption>
             </figure>
 
             <img
-              src="https://placeimg.com/1000/500/arch"
+              src="https://source.unsplash.com/random/300×900/?portrait"
               class="w-1/3 aspect-[1/1.5]"
             />
           </div>
@@ -490,9 +487,8 @@
               </svg>
               <blockquote>
                 <p class="text-2xl italic font-medium text-abumuda">
-                  "Flowbite is just awesome. It contains tons of predesigned
-                  components and pages starting from login screen to complex
-                  dashboard. Perfect choice for your next SaaS application."
+                  "Dwicky Darmawan has the best technology around!. The detail
+                  and quality are well-done. "
                 </p>
               </blockquote>
               <figcaption
@@ -500,21 +496,21 @@
               >
                 <img
                   class="w-6 h-6 rounded-full"
-                  src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/michael-gouch.png"
+                  src="https://source.unsplash.com/random/500×500/?business-portrait"
                   alt="profile picture"
                 />
                 <div class="flex items-center divide-x-2 divide-white">
                   <cite class="pr-3 font-medium text-abumuda"
-                    >Micheal Gough</cite
+                    >Audrey Torres</cite
                   >
                   <cite class="pl-3 text-sm font-light text-abumuda"
-                    >CEO at Google</cite
+                    >Manila</cite
                   >
                 </div>
               </figcaption>
             </figure>
             <img
-              src="https://placeimg.com/1000/500/arch"
+              src="https://source.unsplash.com/random/300×900/?business-portrait"
               class="w-1/3 aspect-[1/1.5]"
             />
           </div>
@@ -534,9 +530,8 @@
               </svg>
               <blockquote>
                 <p class="text-2xl italic font-medium text-abumuda">
-                  "Flowbite is just awesome. It contains tons of predesigned
-                  components and pages starting from login screen to complex
-                  dashboard. Perfect choice for your next SaaS application."
+                  "Would definitely recommend Dwicky Darmawan and will
+                  definitely be ordering again."
                 </p>
               </blockquote>
               <figcaption
@@ -544,21 +539,21 @@
               >
                 <img
                   class="w-6 h-6 rounded-full"
-                  src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/michael-gouch.png"
+                  src="https://source.unsplash.com/random/500×500/?person"
                   alt="profile picture"
                 />
                 <div class="flex items-center divide-x-2 divide-white">
                   <cite class="pr-3 font-medium text-abumuda"
-                    >Micheal Gough</cite
+                    >Parker Rivera</cite
                   >
                   <cite class="pl-3 text-sm font-light text-abumuda"
-                    >CEO at Google</cite
+                    >Istanbul</cite
                   >
                 </div>
               </figcaption>
             </figure>
             <img
-              src="https://placeimg.com/1000/500/arch"
+              src="https://source.unsplash.com/random/300×900/?person"
               class="w-1/3 aspect-[1/1.5]"
             />
           </div>
@@ -578,9 +573,8 @@
               </svg>
               <blockquote>
                 <p class="text-2xl italic font-medium text-abumuda">
-                  "Flowbite is just awesome. It contains tons of predesigned
-                  components and pages starting from login screen to complex
-                  dashboard. Perfect choice for your next SaaS application."
+                  "Affordable, stylish, awesome service. I just love Dwicky
+                  Darmawan!"
                 </p>
               </blockquote>
               <figcaption
@@ -588,21 +582,19 @@
               >
                 <img
                   class="w-6 h-6 rounded-full"
-                  src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/michael-gouch.png"
+                  src="https://source.unsplash.com/random/500×500/?model"
                   alt="profile picture"
                 />
                 <div class="flex items-center divide-x-2 divide-white">
-                  <cite class="pr-3 font-medium text-abumuda"
-                    >Micheal Gough</cite
-                  >
+                  <cite class="pr-3 font-medium text-abumuda">Kirito SAO</cite>
                   <cite class="pl-3 text-sm font-light text-abumuda"
-                    >CEO at Google</cite
+                    >Tokyo</cite
                   >
                 </div>
               </figcaption>
             </figure>
             <img
-              src="https://placeimg.com/1000/500/arch"
+              src="https://source.unsplash.com/random/300×900/?model"
               class="w-1/3 aspect-[1/1.5]"
             />
           </div>
